<resources>
    <string name="app_name">bookMark</string>
    <string name="btnCheckout">Checkout</string>
    <string name="txtTotal">Total</string>
    //UserRegister
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="mail2">Enter Your Email Here</string>
    <string name="nameView">Name</string>
    <string name="name2">Enter Your Name Here</string>
    <string name="pwd1">Password</string>
    <string name="pwd1hint">Create Strong Password</string>
    <string name="pwd2">Confirm Password</string>
    <string name="pwd2hint">Re Enter Password</string>
    <string name="agree">I agree to the</string>
    <string name="terms">Terms and Conditions</string>
    <string name="btn1reg">Register</string>

    //UserLogin
    <string name="enter_password">Enter Password Here</string>
    <string name="bookmark">BookMark</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sign In</string>
    <string name="caption">Hi there ! Nice to see you again.</string>
    <string name="email3">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="check">Remember Me</string>
    <string name="btn_sign">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>


    //Review
    <string name="rate_this">Rate this book </string>
    <string name="rating">3.9/5</string>
    <string name="book_name">Harry Potter</string>
    <string name="customer_review">Customer Reviews</string>
    <string name="total_count">87 Total Reviews</string>
    <string name="bookImg">bookImg</string>
    <string name="filter_condition">All Stars</string>
    <string name="your_review">Your Review</string>
    <string name="comment">Great book</string>
    <string name="editbtn">Edit</string>
    <string name="removebtn">Remove</string>
    <string name="savebtn">Save</string>

    //Profile
    <string name="profile">Profile</string>
    <string name="mail">jeram@gmail.com</string>
    <string name="name">Jeram</string>
    <string name="save">Save</string>
    <string name="payment">Add/Edit Payment Methods</string>
    <string name="reviews">Check My Reviews</string>
    <string name="nametxt">Name</string>


    //Payment
    <string name="btn_submit">Submit</string>
    <string name="btn_cancle">Cancel</string>
    <string name="btn_savedf">Try with another method</string>
    <string name="btn_newc">Use a new card</string>
    <string name="btn_savedc">Use a saved card</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_rename">Rename</string>
    <string name="btn_use">Use</string>
    <string name="tit_payopt">Payment Options</string>
    <string name="tit_adddetail">Add Payment Details</string>
    <string name="tit_paystatus">Card Denied!</string>
    <string name="tit_paystatus2">Card Accepted</string>
    <string name="lbl_qmethod">How do you like to continue with the payment?</string>
    <string name="lbl_hname">Card Holder\'s Name</string>
    <string name="lbl_crdNo">Card No</string>
    <string name="lbl_Exp">Exp. date</string>
    <string name="lbl_cvv">CVV</string>
    <string name="chck_save">Save this card</string>
    <string name="lbl_sotp">Submit your one-time password</string>
    <string name="lbl_otp">OTP</string>
    <string name="lbl_resend">Resend</string>
    <string name="lbl_pays">Payment Failed!</string>
    <string name="btn_saved">Manage My cards</string>

</resources>