<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_management.UserRegister">


    <TextView
        android:id="@+id/registerView"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:text="@string/register"
        android:textColor="#263585"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/mail2"
        android:layout_width="144dp"
        android:layout_height="30dp"
        android:text="@string/email"
        android:textColor="#0B0808"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerView"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/email"
        android:layout_width="287dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/mail2"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#686262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameView"
        android:textColor="#0B0808"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="297dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/name2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#686262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd1"
        android:textColor="#0B0808"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterName"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/enterPwd1"
        android:layout_width="308dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/pwd1hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#686262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/confirmPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwd2"
        android:textColor="#0B0808"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPwd1"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/enterPwd2"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/pwd2hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#686262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPwd"
        app:layout_constraintVertical_bias="0.029" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:width="3dp"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPwd2"
        app:layout_constraintVertical_bias="0.159" />

    <CheckedTextView
        android:id="@+id/chktxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPwd2"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/chktxt2"
        android:layout_width="182dp"
        android:layout_height="46dp"
        android:text="@string/terms"
        android:textColor="#0B0808"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/chktxt1"
        app:layout_constraintTop_toBottomOf="@+id/enterPwd2"
        app:layout_constraintVertical_bias="0.198" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="226dp"
        android:layout_height="55dp"
        android:background="#5D30AC"
        android:text="@string/btn1reg"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chktxt2"
        app:layout_constraintVertical_bias="0.288"
        tools:ignore="DuplicateSpeakableTextCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>