<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_management.UserLogin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="319dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.097"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="5"
            android:gravity="bottom"
            android:hint="@string/enter_pwd"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="22sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="140dp"
        android:layout_marginTop="4dp"
        android:background="#A3CED3"
        android:contentDescription="@string/logo"
        android:src="@drawable/book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="33dp"
        android:text="@string/bookmark"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:text="@string/sign_in"
        android:textColor="#3C4EAF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="276dp"
        android:layout_height="34dp"
        android:text="@string/caption"
        android:textColor="#051713"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:text="@string/email3"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="265dp"
        android:layout_height="52dp"

        android:ems="10"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:textColor="#000000"
        android:textColorHint="#434141"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="132dp"
        android:layout_height="43dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.068" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:text="@string/check"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/btnsign"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:background="#162A49"
        android:text="@string/btn_sign"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#1A4C8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="198dp"
        android:layout_height="38dp"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsign"
        app:layout_constraintVertical_bias="0.321" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="47dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/ic_security"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="36dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.685"
        app:srcCompat="@drawable/ic_baseline_email_24"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>